# llm-from-scratch

./: README.md  pyproject.toml
.cursor/rules/: communication-style.mdc
llm/: ann.ipynb  attention_mechanism.ipynb  causal_attentions.ipynb  data_processing.ipynb  multihead_attention.ipynb  self_attentions.ipynb
neural_network/: ann.ipynb
notes/: README.md  loss-functions.md  vanishing-gradient.md
pytorch/: tensor.ipynb
