[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.5",
    "torch>=2.12.0",
    "ipykernel>=6.29",
    "tensorflow>=2.21.0",
    "keras>=3.14.1",
    "matplotlib>=3.11.0",
    "scikit-learn>=1.9.0",
]
